--- a/deploy.yaml
+++ b/deploy.yaml
@@ -17,7 +17,7 @@ spec:
         spec:
             containers:
                 -   name: test
-                    image: ghcr.io/reotra224/acti-police-api:latest
+                    image: ghcr.io/reotra224/acti-police-api:v20230816-183159
                     imagePullPolicy: IfNotPresent
             restartPolicy: Always
       
