Update old image tag by current tag

--- a/deploy.yaml
+++ b/deploy.yaml
@@ -17,13 +17,13 @@ spec:
         spec:
             containers:
                 -   name: test
-                    image: ghcr.io/reotra224/acti-police-api:v20230816-183159
+                    image: ghcr.io/reotra224/acti-police-api:latest
                     imagePullPolicy: IfNotPresent
             restartPolicy: Always
             
             containers:
                 -   name: test
-                    image: ghcr.io/reotra224/acti-police-api:v20230816-183159
+                    image: ghcr.io/reotra224/acti-police-api:latest
                     imagePullPolicy: IfNotPresent
             restartPolicy: Always
       
